k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: devops-challenge
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
  - port: 80
    targetPort: 8000
